# capsule-fs

./: Capsule.toml  Cargo.toml  README.md
src/: grep.rs  lib.rs
