[package]
name = "astrid-capsule-fs"
version = "0.1.0"
edition = "2024"
description = "Core filesystem tools for the Astrid microkernel"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
astrid-sdk = { version = "0.5.3", features = ["derive"] }
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
codegen-units = 1
lto = true
strip = true
